--- a/Corruption/.classpath
+++ b/Corruption/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry including="com/me/corruption/CorruptionGdxGame.java|com/me/corruption/hexMap/HexMap.java|com/me/corruption/hexMap/HexMapGenerator.java|com/me/corruption/hexMap/HexMapRenderer.java|com/me/corruption/hexMap/HexMapSpriteList.java|com/me/corruption/hexMap/HexMapSpriteObject.java|com/me/corruption/ui/GameUI.java" kind="src" path="src"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="lib" path="libs/gdx.jar" sourcepath="libs/gdx-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" exported="true" path="libs/gdx.jar" sourcepath="libs/gdx-sources.jar"/>
 </classpath>
